--- a/frontend/eUprava/src/app/gp_components/granica/granica.component.html
+++ b/frontend/eUprava/src/app/gp_components/granica/granica.component.html
@@ -19,8 +19,8 @@
     </thead>
     <tbody>
     <tr *ngFor="let provera of provere |async">
-      <td>{{provera.Policajac.Ime}} + {{provera.Policajac.Prezime}}</td>
-      <td>{{provera.Gradjanin.Ime}} + {{provera.Gradjanin.Prezime}}</td>
+      <td>{{provera.Policajac.Ime}} {{provera.Policajac.Prezime}}</td>
+      <td>{{provera.Gradjanin.Ime}} {{provera.Gradjanin.Prezime}}</td>
       <td>{{provera.Gradjanin.Jmbg}}</td>
       <td>{{provera.Vreme}}</td>
       <td>{{provera.Poternica.Naslov}}</td>
